# julius-baer-side-quest

./: CLAUDE.md
submissions/choiwab/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  banking_client.py  cli.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  test_banking_client.py
